--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,16 @@
     		<artifactId>mysql-connector-java</artifactId>
     		<scope>runtime</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-api</artifactId>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.seleniumhq.selenium</groupId>
+		    <artifactId>selenium-java</artifactId>
+		    </dependency>
+		
 	</dependencies>
 
 	<build>
